# event_control_system

./: LICENSE  README.md  builds.toml  doxyfile  meson.build  meson_options.txt  tasks.py
application/include/: adc.hpp  bits.hpp  command.hpp  commands.def  control.hpp  controls.def  error.hpp  errors.def  event.hpp  events.def  gpio.hpp  input.hpp  io.hpp  macros.hpp  mutex.hpp  output.hpp  periodic.hpp  settings.def  settings.hpp  settings_backend.hpp  setup.hpp  task.hpp  task_control.hpp  task_open.hpp  tasks.def  uart.hpp  utility.hpp  version.hpp
application/source/: adc.cpp  command.cpp  control.cpp  control_CLI.cpp  control_eventPrint.cpp  error.cpp  event.cpp  gpio.cpp  input.cpp  io.cpp  mutex.cpp  output.cpp  periodic.cpp  settings.cpp  settings_backend_flash.cpp  setup.cpp  task.cpp  task_control.cpp  task_open.cpp  uart.cpp  utility.cpp  version.cpp
drivers/versatilepb/source/: syscalls.c  sysmen.c
drivers/versatilepb/startup/: linker_flash.ld  main.c  startup.S
hal/include/: adc_hal.hpp  flash_hal.hpp  gpio_hal.hpp  hal.hpp  isr_hal.hpp  mem_hal.hpp  platforms.def  platforms_footer.def  platforms_header.def  power_hal.hpp  uart_hal.hpp
hal/source/: adc_hal.cpp  flash_hal.cpp  gpio_hal.cpp  hal.cpp  isr_hal.cpp  mem_hal.cpp  power_hal.cpp  uart_hal.cpp
hal/versatilepb_qemu/: adc_hal_versatilepb_qemu.cpp  flash_hal_versatilepb_qemu.cpp  gpio_hal_versatilepb_qemu.cpp  isr_hal_versatilepb_qemu.cpp  mem_hal_versatilepb_qemu.cpp  power_hal_versatilepb_qemu.cpp  uart_hal_versatilepb_qemu.cpp
osal/freertos/: mutex_osal_freertos.cpp  queue_osal_freertos.cpp  task_osal_freertos.cpp  timer_osal_freertos.cpp
osal/include/: mutex_osal.hpp  osal.hpp  queue_osal.hpp  rtos.def  setup_osal.h  task_osal.hpp  timer_osal.hpp
osal/source/: mutex_osal.cpp  osal.cpp  queue_osal.cpp  task_osal.cpp  timer_osal.cpp
rtos/freertos/include/: FreeRTOS.h  mpu_prototypes.h  portable.h  projdefs.h  task.h
rtos/freertos/port/versatilepb/: FreeRTOSConfig.h  port.c
rtos/freertos/source/: tasks.c
scripts/: .gitignore  dependencies.sh  generate_builds.py  generate_init.py  generate_io.py  generate_source.py  generate_version.py  readme_linker.py
templates/: template.cpp  template.hpp  template.py  template_test.cpp  template_test.hpp  template_test.py
test/: README.md
test/system/: conftest.py  control_CLI_test.py  control_eventPrint_test.py
test/unit/include/: adc_test.hpp  control_test.hpp  periodic_test.hpp  settings_test.hpp  task_open_test.hpp  task_test.hpp
test/unit/source/: adc_test.cpp  command_test.cpp  control_CLI_test.cpp  control_eventPrint_test.cpp  control_test.cpp  error_test.cpp  event_test.cpp  gpio_test.cpp  io_test.cpp  main.cpp  mutex_test.cpp  output_test.cpp  periodic_test.cpp  settings_backend_flash_test.cpp  settings_test.cpp  setup_test.cpp  task_control_test.cpp  task_open_test.cpp  task_test.cpp  uart_test.cpp  utility_test.cpp  version_test.cpp
